--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -3,11 +3,11 @@
     height: 100%;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .card{
-    height: 300px;
+    height: 330px;
     margin: 14px;
     padding: 20px 30px;
     background-color: white;
